--- a/print.html
+++ b/print.html
@@ -139,7 +139,7 @@
 <p>Ayaka project is a project for OSPP 2022.
 It is a voice novel engine which aims at 3 goals: simple, free, concentrate.</p>
 <h2 id="simple"><a class="header" href="#simple">Simple</a></h2>
-<p>A voice novel should be easy to author.
+<p>A visual novel should be easy to author.
 The author need little knowledge of programming.
 We provide a config file format based on YAML and TeX-like commands.
 It is easy to learn and author your own voice novel.</p>
