--- a/runtime/run.html
+++ b/runtime/run.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <title>Run a game - Ayaka Book</title>
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -28,13 +27,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -50,7 +49,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -62,7 +61,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -93,7 +92,7 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="light">Light (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
@@ -124,7 +123,7 @@
                     </div>
                 </div>
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -138,16 +137,13 @@
 <p>The CLI tool in <code>bins/ayaka-check</code> is a full example to run a game.</p>
 <h2 id="open-a-config-file"><a class="header" href="#open-a-config-file">Open a config file</a></h2>
 <pre><code class="language-rust ignore">use ayaka_runtime::*;
-let mut context = Context::open(&quot;../../../examples/Fibonacci/config.yaml&quot;, FrontendType::Text).await?;
-</code></pre>
+let mut context = Context::open(&quot;../../../examples/Fibonacci/config.yaml&quot;, FrontendType::Text).await?;</code></pre>
 <p>The context object should be initialized first to start from an initial record.</p>
-<pre><code class="language-rust ignore">context.init_new();
-</code></pre>
+<pre><code class="language-rust ignore">context.init_new();</code></pre>
 <p>Then you can iterate the actions:</p>
 <pre><code class="language-rust ignore">while let Some(action) = context.next_run() {
     //...
-}
-</code></pre>
+}</code></pre>
 <h2 id="get-the-open-status"><a class="header" href="#get-the-open-status">Get the open status</a></h2>
 <p>The <code>context</code> also implements <code>Stream</code>.
 The <code>OpenStatus</code> could be iterated before the future awaited.</p>
@@ -157,8 +153,7 @@ pin_mut!(context);
 while let Some(status) = context.next().await {
     println!(&quot;{:?}&quot;, status);
 }
-let mut context = context.await?;
-</code></pre>
+let mut context = context.await?;</code></pre>
 
                     </main>
 
@@ -186,15 +181,15 @@ let mut context = context.await?;
 
         </div>
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
     </body>
